--- a/src/app/modules/results/results-main/results-main.component.css
+++ b/src/app/modules/results/results-main/results-main.component.css
@@ -95,24 +95,16 @@ section {
 /*=======================REVISE THIS SHIT CODE=========================*/
 
 .DENTAL-PLAN {
-  width: 113px;
-  height: 20px;
+  width: 250px;
+  height: 35px;
   font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: 1.71;
-  letter-spacing: 1px;
+  letter-spacing: 1.17px;
   color: #9b9b9b;
-  margin-top: 0px;
-  /*margin-bottom: 12px;*/
-  /*margin-top: 12px;*/
-  /*margin-left: 15px;*/
-  border: 0px;
-  margin-top:0px
-;
-
 }
 
 .AdvancedSEARCH_div {
@@ -169,7 +161,7 @@ section {
   font-style: normal;
   line-height: 1.71;
   letter-spacing: 1.17px;
-  /*color: #9b9b9b;*/
+  color: #9b9b9b;
 
   border: 1px;
   padding-left: 12px;
@@ -529,15 +521,24 @@ section {
 }
 
 .Rectangle-739-Copy {
-  width: 185px;
+  width: 225px;
   height: 3px;
   /*border-radius: 100px;*/
   /*background-color: #06a0ff;*/
   display: inline-block;
-  /*margin-right: 10px;*/
-
+  margin-left: 15px;
 }
 
+.Rectangle-739-Copy>span {
+  font-family: SourceSansPro-Regular;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: 1.17px;
+  color: #9b9b9b;
+}
 .mat-slider.mat-slider-horizontal .mat-slider-track-fill {
   background-color: blue;
 }
