Home page style fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -178,3 +178,6 @@ input:checked + .slider:before {
 }
 
 /*=============END CUSTOM TOGGLE SWITCH STYLING===============*/
+.genderBtn {
+  color: #9b9b9b;
+}
