Home page style fix

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -119,7 +119,7 @@
               <label class="containerLabel" for="cbxEndodontics">Endodontics
                 <input *ngIf="searchParams.specializationMap.get('Endodontics')" checked type="checkbox"
                        id="cbxEndodontics" (change)="onSpecializationCheckboxChanged('Endodontics')">
-                <input *ngIf="!searchParams.specializationMap.get('Endodontics')" type="checkbox" id="cbxEndodontist"
+                <input *ngIf="!searchParams.specializationMap.get('Endodontics')" type="checkbox" id="cbxEndodontics"
                        (change)="onSpecializationCheckboxChanged('Endodontics')">
                 <span class="checkmark"></span>
               </label>
