--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -158,7 +158,7 @@
                         <label class="Extended-Hours"> EXTENDED HOURS</label>
                         <br/>
                         <label class="Saturday"> Saturday</label>
-                        <mat-slide-toggle style="height:12px" id="extendedhourse_saturday" #inputElement4 (change)="isThereExtendedhourse_saturday(inputElement4.checked)" name="extendedhourse_saturday" color="default" checked="false" disabled="false"></mat-slide-toggle>
+                        <mat-slide-toggle style="height:12px" id="extendedhourse_saturday" #inputElement4 (change)="isThereExtendedhourse_saturday(inputElement4.checked)" name="extendedhourse_saturday" color="primary" checked="false" disabled="false"></mat-slide-toggle>
                         <!-- <input style="height:12px" type="checkbox" id="extendedhourse_saturday" #inputElement4
                    (change)="isThereExtendedhourse_saturday(inputElement4.checked)"
                    name="extendedhourse_saturday" data-toggle="toggle"/> -->
