--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -39,7 +39,7 @@
                 <button class="Advanced-search" (click)="advancedSearch()">
           Advanced search
         </button>
-                <img src="../../../assets/icons/page-1-copy.png" height="7" width="12" />
+                <img src="../../../assets/icons/page-1-copy.png" height="7" width="12" (click)="advancedSearch()" />
             </div>
         </div>
 
